Fixed the alignment issues.

--- a/view.css
+++ b/view.css
@@ -111,7 +111,7 @@ a {
 }
 
 .CodeMirror-gutter {
-	width: 5em;
+	width: 5.5em;
 	background: white;
 }
 
